# recap

./: CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
cli/: Cargo.toml
cli/src/: main.rs
extension/: manifest.json  options.html  options.js  popup.html  popup.js
prisma/: schema.prisma
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/api/ai/settings/: route.ts
src/app/api/ai/suggest/: route.ts
src/app/api/auth/register/: route.ts
src/app/api/bookmarks/: route.ts
src/app/api/bookmarks/[id]/: route.ts
src/app/api/bookmarks/metadata/: route.ts
src/app/api/collections/: route.ts
src/app/api/export/: route.ts
src/app/api/import/: route.ts
src/app/api/tags/: route.ts
src/app/app/: layout.tsx  page.tsx
src/app/app/archive/: page.tsx
src/app/app/collections/: page.tsx
src/app/app/collections/[id]/: page.tsx
src/app/app/favorites/: page.tsx
src/app/app/search/: page.tsx
src/app/app/settings/: page.tsx
src/app/app/tags/: page.tsx
src/app/login/: page.tsx
src/app/register/: page.tsx
src/components/bookmarks/: add-bookmark-dialog.tsx  bookmark-grid.tsx  bookmark-list.tsx
src/components/layout/: app-shell.tsx
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx
src/lib/: accent-theme.tsx  auth.ts  db.ts  utils.ts  validations.ts
src/types/: index.ts
