[package]
name = "recap-cli"
version = "1.0.0"
edition = "2021"
description = "Recap bookmark manager CLI - save and search bookmarks from the terminal"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
